# robot_calibration

./: .codecov.sh  .coverage.sh  .travis.sh  .travis.yml  .upstream.repos  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  coverage.sh  package.xml  rosdoc.yaml  setup.py
.github/workflows/: industrial_ci_action.yaml
launch/: calibrate.launch  calibration_poses.bag  capture.launch
msg/: CalibrationData.msg  DepthCameraInfo.msg
robot_calibration/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  robot_calibration.xml  rosdoc.yaml
robot_calibration/include/robot_calibration/: calibration_offset_parser.h  camera_info.h  capture_features.h  depth_camera.h  eigen_geometry.h  load_bag.h  mesh_loader.h  optimize_parameters.h
robot_calibration/include/robot_calibration/calibration/: base_calibration.h  export.h  offset_parser.h
robot_calibration/include/robot_calibration/capture/: capture_manager.h  chain_manager.h  checkerboard_finder.h  depth_camera.h  feature_finder.h  feature_finder_loader.h  gripper_color_finder.h  gripper_depth_finder.h  gripper_finder_depth.h  ground_plane_finder.h  led_finder.h  plane_finder.h  poses.h  robot_finder.h  scan_finder.h
robot_calibration/include/robot_calibration/ceres/: .camera3d_to_arm_error.h.swp  .gripper_color_error.h.swp  .gripper_depth_error.h.swp  calibration_data_helpers.h  camera3d_to_arm_error.h  camera_to_camera_error.h  chain3d_to_camera2d_error.h  chain3d_to_chain3d_error.h  chain3d_to_mesh_error.h  chain3d_to_plane_error.h  data_functions.h  gripper_color_error.h  gripper_depth_error.h  ground_plane_error.h  magnetometer_error.h  optimization_params.h  optimizer.h  outrageous_error.h  plane_to_plane_error.h
robot_calibration/include/robot_calibration/cost_functions/: chain3d_to_camera2d_error.hpp  chain3d_to_chain3d_error.hpp  chain3d_to_mesh_error.hpp  chain3d_to_plane_error.hpp  magnetometer_error.hpp  outrageous_error.hpp  plane_to_plane_error.hpp
robot_calibration/include/robot_calibration/finders/: checkerboard_finder.hpp  feature_finder.hpp  led_finder.hpp  loader.hpp  plane_finder.hpp  robot_finder.hpp  scan_finder.hpp
robot_calibration/include/robot_calibration/models/: camera2d.h  camera2d.hpp  camera3d.h  camera3d.hpp  chain.h  chain3d.hpp
robot_calibration/include/robot_calibration/optimization/: base_calibration.hpp  ceres_optimizer.hpp  export.hpp  offsets.hpp  params.hpp
robot_calibration/include/robot_calibration/plugins/: feature_finder.h
robot_calibration/include/robot_calibration/util/: action_client.hpp  calibration_data.hpp  camera_info.hpp  capture_manager.hpp  chain_manager.hpp  depth_camera_info.hpp  eigen_geometry.hpp  mesh_loader.hpp  poses_from_yaml.hpp
robot_calibration/libs/: capture_features_lib.cpp
robot_calibration/scripts/: calibration_poses.bag  capture_poses  feature.py  merge.py  mix.bag  outbag_sampled.bag  output_arm.bag  output_combined.bag  output_ground.bag
robot_calibration/scripts/migration/: bag_from_yaml  convert_ros1_bag_to_yaml
robot_calibration/src/: .feature_finder.cpp.swp  .gripper_color_error.cpp.swp  .gripper_depth_finder.cpp.swo  .gripper_depth_finder.cpp.swp  .models.cpp.swp  .optimizer.cpp.swp  base_calibration.cpp  base_calibration_node.cpp  calibrate.cpp  calibrate_base.cpp  calibration_export.cpp  calibration_offset_parser.cpp  capture_features.cpp  capture_manager.cpp  capture_poses.cpp  chain_manager.cpp  checkerboard_finder.cpp  feature_finder.cpp  frames.gv  gripper_color_error.cpp  gripper_color_finder.cpp  gripper_depth_finder.cpp  gripper_finder_depth.cpp  ground_plane_finder.cpp  led_finder.cpp  magnetometer_calibration.cpp  mesh_loader.cpp  models.cpp  optimization_params.cpp  optimize_parameters.cpp  optimizer.cpp  plane_finder.cpp
robot_calibration/src/details/: capture_features_lib.cpp  optimize_parameters_lib.cpp
robot_calibration/src/finders/: checkerboard_finder.cpp  ground_plane_finder.cpp  led_finder.cpp  plane_finder.cpp  robot_finder.cpp  scan_finder.cpp
robot_calibration/src/nodes/: base_calibration.cpp  calibrate.cpp  magnetometer_calibration.cpp  to_rpy.cpp  viz.cpp  viz_mesh.cpp
robot_calibration/src/optimization/: ceres_optimizer.cpp  export.cpp  offsets.cpp  params.cpp
robot_calibration/src/tools/: to_rpy.cpp  viz.cpp  viz_mesh.cpp
robot_calibration/src/util/: capture_manager.cpp  capture_poses.cpp  chain_manager.cpp  mesh_loader.cpp  poses_from_yaml.cpp
robot_calibration/test/: CMakeLists.txt  calibration_offset_parser_tests.cpp  camera_info_publisher.py  camera_info_tests.cpp  camera_info_tests.test  camera_info_tests_launch.py  chain_manager_tests.cpp  chain_manager_tests.launch  chain_manager_tests.yaml  chain_manager_tests_launch.py  chain_model_tests.cpp  error_block_tests.cpp  error_block_tests.test  error_block_tests.yaml  error_block_tests2.cpp  error_block_tests2.test  error_block_tests2.yaml  error_block_tests2_launch.py  error_block_tests_launch.py  feature_finder_loader_tests.cpp  feature_finder_loader_tests.py  feature_finder_loader_tests.test  feature_finder_loader_tests.yaml  feature_finder_loader_tests_launch.py  optimization_offsets_tests.cpp  optimization_param_tests.cpp  optimization_param_tests.test  optimization_param_tests.yaml  optimization_param_tests_launch.py  poses_from_yaml_tests.cpp  poses_from_yaml_tests.yaml  rotation_tests.cpp
robot_calibration_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_calibration_msgs/action/: GripperLedCommand.action
robot_calibration_msgs/msg/: CalibrationData.msg  CaptureConfig.msg  ExtendedCameraInfo.msg  Observation.msg  Plane.msg
scripts/: robot_calibration
src/: calibrate.cpp  calibrate_base.cpp  calibration_offset_parser.cpp  chain_manager.cpp  checkerboard_finder.cpp  led_finder.cpp  models.cpp  optimization_params.cpp  optimizer.cpp
test/: CMakeLists.txt  calibration_offset_parser_tests.cpp  chain_manager_tests.yaml  error_block_tests.cpp  make_test_bag  optimization_param_tests.cpp  optimization_param_tests.yaml  test_calibration_offset_parser.cpp  test_error_blocks.cpp  test_rotations.cpp
(+26 files in other folders)
