<package>
  <name>robot_calibration</name>
  <version>0.1.0</version>
  <description>
    Calibrate a Robot
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>Apache2</license>
  <url>http://ros.org/wiki/robot_calibration</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>libgflags-dev</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>protobuf-dev</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>libceres-dev</run_depend>
  <run_depend>suitesparse</run_depend>
  <run_depend>protobuf-dev</run_depend>

</package>
