<?xml version="1.0"?>
<package format="3">

  <name>robot_calibration</name>
  <version>0.6.5</version>
  <description>
    Calibrate a Robot
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>Apache2</license>
  <url>http://ros.org/wiki/robot_calibration</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>control_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>moveit_msgs</depend>
  <depend>nav_msgs</depend>
  <depend condition="$ROS_DISTRO != noetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>
  <depend>pluginlib</depend>
  <depend>robot_calibration_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>libceres-dev</depend>
  <depend>libgflags-dev</depend>
  <depend>suitesparse</depend>
  <depend>protobuf-dev</depend>

  <test_depend>code_coverage</test_depend>

  <export>
    <robot_calibration plugin="${prefix}/robot_calibration.xml"/>
  </export>

</package>
