<?xml version="1.0"?>
<package format="3">

  <name>robot_calibration</name>
  <version>0.8.1</version>
  <description>
    Calibrate a Robot
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>Apache2</license>
  <url>http://ros.org/wiki/robot_calibration</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>camera_calibration_parsers</depend>
  <depend>control_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>kdl_parser</depend>
  <depend>moveit_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>liborocos-kdl-dev</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>robot_calibration_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tinyxml2</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>visualization_msgs</depend>
  <depend>libceres-dev</depend>
  <depend>libgflags-dev</depend>
  <depend>suitesparse</depend>
  <depend>protobuf-dev</depend>
  <depend>yaml-cpp</depend>

  <!-- Temporary hack for issue with geometric_shapes -->
  <build_depend>libboost-filesystem-dev</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
